[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Delius-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Choices.gd" type="Script" id=2]

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0588235, 0.0509804, 0.0509804, 0.901961 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0588235, 0.0509804, 0.0509804, 0.901961 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="Choices" type="Node2D"]
script = ExtResource( 2 )

[node name="ChoiceOne" type="Button" parent="."]
margin_left = 526.178
margin_top = 352.225
margin_right = 1452.18
margin_bottom = 478.225
focus_mode = 0
theme = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
text = "yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceTwo" type="Button" parent="."]
margin_left = 533.0
margin_top = 555.0
margin_right = 1457.0
margin_bottom = 681.0
focus_mode = 0
theme = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
enabled_focus_mode = 0
text = "no"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ChoiceOne" to="." method="_on_ChoiceOne_pressed"]
[connection signal="pressed" from="ChoiceTwo" to="." method="_on_ChoiceTwo_pressed"]
